grammar.js
    _block_level_item: $ =>
      choice(
        $.declaration,
        $._statement,
        $.preproc_error,
        $.preproc_def,
        alias($.preproc_ifver_in_block, $.preproc_ifver),
        alias($.preproc_ifdef_in_block, $.preproc_ifdef),
        alias($.preproc_region_in_block, $.preproc_region)
      ),

    // Preprocessors

    function_definition: $ =>
      seq(
        $._function_definition_specifiers,
        $.function_declarator,
        $.compound_statement
      ),

    top_level_declaration: $ =>
      statement(
        $._declaration_specifiers,
        commaSep1(choice($._declarator, $.init_literal_declarator))
      ),

    declaration: $ =>
      statement(
        $._declaration_specifiers,
        commaSep1(choice($._declarator, $.init_declarator))
      ),

    _function_definition_specifiers: $ =>
      seq(repeat($.function_access_specifier), $._function_type_specifier),

    function_type: $ => choice('function', 'void'),

    _declaration_specifiers: $ => $._type_specifier,

    _parameter_declaration_specifiers: $ =>
      seq(optional($.type_qualifier), $._type_specifier),

    _declarator: $ => choice($.pointer_declarator, $._pointerless_declarator),

    _parameter_declarator: $ =>
      choice($.pointer_declarator, $.array_declarator, $.identifier),

    function_declarator: $ =>
      prec(1, seq($._function_declarator, $.parameter_list)),

    _function_declarator: $ =>
      choice(
        $._function_pointer_declarator,
        $._function_pointerless_declarator
      ),
    init_declarator: $ => seq($._declarator, '=', $._expression),

    compound_statement: $ => seq('{', repeat($._block_level_item), '}'),

    primitive_type: $ =>
      token(choice('bool', 'char', 'float', 'int', 'long', 'short', 'string')),

    parameter_list: $ => seq('(', commaSep($.parameter_declaration), ')'),

    parameter_declaration: $ =>
      seq(
        $._parameter_declaration_specifiers,
        optional($._parameter_declarator)
      ),

    _statement: $ =>
      choice(
        $.compound_statement,
        $.expression_statement,
        $.if_statement,
        $.switch_statement,
        $.do_statement,
        $.while_statement,
        $.for_statement,
        $.return_statement,
        $.break_statement,
        $.continue_statement
      ),

    expression_statement: $ =>
      statement(optional(choice($._expression, $.comma_expression))),

    if_statement: $ =>
      prec.right(
        seq(
          'if',
          $.parenthesized_expression,
          $._statement,
          repeat($._else_preproc_item),
          optional($.else_statement)
        )
      ),

    _else_preproc_item: $ =>
      choice(
        alias($.preproc_ifdef_with_else, $.preproc_ifdef),
        alias($.preproc_ifver_with_else, $.preproc_ifver),
        alias($.preproc_region_with_else, $.preproc_region)
      ),

    switch_statement: $ =>
      seq(
        'switch',
        $.parenthesized_expression,
        alias($.switch_body, $.compound_statement)
      ),

    case_statement: $ =>
      prec.right(
        seq(
          choice(seq('case', $._expression), 'default'),
          ':',
          repeat(choice($._statement, $.declaration))
        )
      ),

    while_statement: $ =>
      seq('while', $.parenthesized_expression, $._statement),

    for_statement: $ =>
      seq(
        'for',
        '(',
        choice($.declaration, statement(optional($._expression))),
        optional($._expression),
        ';',
        commaSep($._expression),
        ')',
        $._statement
      ),

    break_statement: $ => statement('break'),

    _expression: $ =>
      choice(
        $.assignment_expression,
        $.new_expression,
        $.logical_expression,
        $.bitwise_expression,
        $.equality_expression,
        $.relational_expression,
        $.shift_expression,
        $.math_expression,
        $.pointer_expression,
        $.subscript_expression,
        $.call_expression,
        $.field_expression,
        $.identifier,
        $.number_literal,
        $.string_literal,
        $.true,
        $.false,
        $.null,
        $.concatenated_string,
        $.char_literal,
        $.parenthesized_expression
      ),

    assignment_expression: $ =>
      prec.right(
        PREC.ASSIGNMENT,
        seq(
          $._expression,
          choice('=', '*=', '/=', '+=', '-=', '<<=', '>>=', '&=', '^=', '|='),
          $._expression
        )
      ),

    logical_expression: $ =>
      choice(
        prec.left(PREC.LOGICAL_OR, seq($._expression, '||', $._expression)),
        prec.left(PREC.LOGICAL_AND, seq($._expression, '&&', $._expression)),
        prec.left(PREC.UNARY, seq('!', $._expression))
      ),

    relational_expression: $ =>
      prec.left(
        PREC.RELATIONAL,
        seq($._expression, choice('<', '>', '<=', '>='), $._expression)
      ),

    call_expression: $ => prec(PREC.CALL, seq($._expression, $.argument_list)),

    argument_list: $ => seq('(', commaSep($._expression), ')'),

    parenthesized_expression: $ =>
      seq('(', choice($._expression, $.comma_expression), ')'),

    number_literal: $ => /\d+(\.\d+)?/,

    string_literal: $ =>
      seq(
        '"',
        repeat(
          choice(token.immediate(prec(1, /[^\\"\n]+/)), $.escape_sequence)
        ),
        '"'
      ),

    //FIXME: Replace with AGS String formatting
    identifier: $ => /[a-zA-Z_]\w*/,
    comment: $ =>
      token(choice(seq('//', /.*/), seq('/*', /[^*]*\*+([^/*][^*]*\*+)*/, '/')))
  }
})

module.exports.PREC = PREC
